feat add sum function in main.js and DOM in index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <body>
     <div id="app"></div>
     <div>1回目の変更</div>
+    <div>
+      <input id="js-number1" type="number" />+<input
+        id="js-number2"
+        type="number"
+      />
+      = <span id="js-total"></span>
+
+      <input id="js-btn" value="合計" type="button" />
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
