fix move input tag

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         type="number"
       />
       = <span id="js-total"></span>
-
-      <input id="js-btn" value="合計" type="button" />
     </div>
-    <script type="module" src="/main.js"></script>
+    <input id="js-btn" value="合計" type="button" />
+
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
